@@ -182,6 +182,10 @@ CVS code -
 	- If we use the --disable-wrapping option, ignore the
 	  --disable-wrapping-as-root option. (DLR)
 	- Add minor cosmetic tweaks. (DLR)
+- doc/faq.html:
+	- Update section 5.3 again to not state "the latest development
+	  version" before 1.3.12, as it's no longer accurate. (DLR)
+	- Add some minor spacing fixes. (DLR)
 - doc/syntax/c.nanorc:
 	- Since .i and .ii are preprocessed C and C++ output, colorize
 	  them here. (Mike Frysinger)
